--- a/src/styles/scss/_theme-custom-styles.scss
+++ b/src/styles/scss/_theme-custom-styles.scss
@@ -13,6 +13,10 @@
   padding-right: 1px;
 }
 
+.mt_-2{
+  margin-top: -2px;
+}
+
 /* ----------------------------
   Hero Form 1
 ------------------------------*/
