--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -202,6 +202,9 @@
 			margin-right: -850px;
 		}
 	}
+	.Toastify .fancy-progress-bar {
+		background: rgba(255, 255, 255, 0.45);
+	}	
 	.heroBannerOne a {
 		width: 100%!important;
 	}
